# Think-aLIE

./: .gitignore  README.md  home.html  index.html  login.html  railway.json  requirements.txt  test_conn.py
backend/: app.py  auth.py  database.py  main.py  media_projects.py  models.py  pyproject.toml  requirements.txt
backend/auth/: router.py  schemas.py  security.py
data/concept_graph/: index.json  node_01_memory_model.json
data/concept_graph/arrays/: index.json  node_02_data_representation.json  node_03_contiguous_memory_allocation.json  node_04_indexing_mechanism.json  node_05_random_access.json  node_06_time_complexity.json  node_07_cache_locality.json  node_08_traversal_patterns.json  node_09_insertion_deletion.json  node_10_multi_dimensional_intro.json  node_11_summary_ai_scope.json
frontend/: signup.html
