[tool.poetry]
name = "think-lie-backend"
version = "0.1.0"
description = "Think-LIE FastAPI backend"
authors = ["Aravind"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "*"
uvicorn = "*"
python-dotenv = "*"
google-genai = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"